<resources>
    <string name="app_name">FingerPrintApp</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove User</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please Enter Your Password</string>
    <string name="btn_link_to_register">Not a member? Get Registered in Firebase now!</string>
    <string name="btn_link_to_login">Already Registered? Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="forgot_password_msg">We need your registered Email Id to send the password reset instructions</string>
    <string name="email_id">Email ID</string>
    <string name="btn_Proceed_to_HomePage">Proceed to Home Page</string>
    <string name="admin_menu">ADMIN MENU</string>
    <string name="view_users">VIEW USERS</string>
    <string name="view">view</string>
    <string name="TITLE">Admin Menu</string>
    <string name="add_user">ADD USER</string>
    <string name="add_subject">ADD SUBJECT</string>
    <string name="view_attendance">VIEW ATTENDANCE</string>
    <string name="activity_one">Activity One</string>
    <string name="activity_two">Activity Two</string>
    <string name="activity_three">Activity Three</string>
    <string name="activity_four">Activity Four</string>
    <string name="activity_five">Activity Five</string>
    <string name="activity_six">Activity Six</string>
    <string name="welcome">WELCOME!</string>
    <string name="admin">ADMIN</string>
    <string name="student">STUDENT</string>
    <string name="lecturer">LECTURER</string>
    <string name="image">Image</string>
    <string name="class_teacher">Class Teacher</string>

    <item name="mainGrid" type="id"></item>

    <array name="courses">

        <item>Web Development</item>
        <item>Economics</item>
        <item>Programming</item>
        <item>Mobile Development</item>
        <item>Business Law</item>
        <item>Web Development</item>
    </array>

</resources>
